// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders consistently 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  min-width: 38px;
}

.c0 .AvatarItem {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 20px;
  width: 20px;
  box-shadow: 0 0 0 1px #fff;
  margin-left: -11px;
  position: relative;
  overflow: hidden;
  -webkit-transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
  transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
}

.c0 .AvatarItem:first-child {
  margin-left: 0;
}

.c0 .AvatarItem:nth-child(n + 4) {
  display: none;
}

.c0.AvatarStack--two {
  min-width: 30px;
}

.c0.AvatarStack--two .AvatarItem:nth-child(n + 3) {
  display: none;
}

.c0.AvatarStack--three-plus {
  min-width: 38px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(3) {
  opacity: 55%;
  margin-left: -17px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(4) {
  opacity: 40%;
  margin-left: -17px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(5) {
  opacity: 25%;
  margin-left: -17px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(n + 4) {
  display: block;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(n + 6) {
  opacity: 0;
  visibility: hidden;
}

.c0.AvatarStack--right {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0.AvatarStack--right .AvatarItem {
  margin-left: 0 !important;
  margin-right: -11px;
}

.c0.AvatarStack--right .AvatarItem:first-child {
  margin-right: 0;
}

.c0.AvatarStack--right .AvatarStackBody {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0.AvatarStack--right .AvatarStackBody:hover .AvatarItem {
  margin-right: 4px!important;
  margin-left: 0 !important;
}

.c0.AvatarStack--right .AvatarStackBody:hover .AvatarItem:first-child {
  margin-right: 0;
}

.c0.AvatarStack--three-plus.AvatarStack--right .AvatarItem:nth-child(3) {
  margin-right: -17px;
}

.c0.AvatarStack--three-plus.AvatarStack--right .AvatarItem:nth-child(4) {
  margin-right: -17px;
}

.c0.AvatarStack--three-plus.AvatarStack--right .AvatarItem:nth-child(5) {
  margin-right: -17px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 38px;
}

.c1:hover {
  width: auto;
}

.c1:hover .AvatarItem {
  margin-left: 4px!important;
  opacity: 100% !important;
  visibility: visible;
  box-shadow: 0 0 0 4px #fff;
}

.c1:hover .AvatarItem:first-child {
  margin-left: 0;
}

<span
  className="c0 AvatarStack--three-plus"
>
  <span
    className="c1 AvatarStackBody"
  >
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
      sx={
        Object {
          "zIndex": 10,
        }
      }
    />
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/github"
      sx={
        Object {
          "zIndex": 9,
        }
      }
    />
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
      sx={
        Object {
          "zIndex": 8,
        }
      }
    />
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/github"
      sx={
        Object {
          "zIndex": 7,
        }
      }
    />
  </span>
</span>
`;

exports[`Avatar respects alignRight props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  min-width: 38px;
}

.c0 .AvatarItem {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 20px;
  width: 20px;
  box-shadow: 0 0 0 1px #fff;
  margin-left: -11px;
  position: relative;
  overflow: hidden;
  -webkit-transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
  transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
}

.c0 .AvatarItem:first-child {
  margin-left: 0;
}

.c0 .AvatarItem:nth-child(n + 4) {
  display: none;
}

.c0.AvatarStack--two {
  min-width: 30px;
}

.c0.AvatarStack--two .AvatarItem:nth-child(n + 3) {
  display: none;
}

.c0.AvatarStack--three-plus {
  min-width: 38px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(3) {
  opacity: 55%;
  margin-left: -17px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(4) {
  opacity: 40%;
  margin-left: -17px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(5) {
  opacity: 25%;
  margin-left: -17px;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(n + 4) {
  display: block;
}

.c0.AvatarStack--three-plus .AvatarItem:nth-child(n + 6) {
  opacity: 0;
  visibility: hidden;
}

.c0.AvatarStack--right {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0.AvatarStack--right .AvatarItem {
  margin-left: 0 !important;
  margin-right: -11px;
}

.c0.AvatarStack--right .AvatarItem:first-child {
  margin-right: 0;
}

.c0.AvatarStack--right .AvatarStackBody {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0.AvatarStack--right .AvatarStackBody:hover .AvatarItem {
  margin-right: 4px!important;
  margin-left: 0 !important;
}

.c0.AvatarStack--right .AvatarStackBody:hover .AvatarItem:first-child {
  margin-right: 0;
}

.c0.AvatarStack--three-plus.AvatarStack--right .AvatarItem:nth-child(3) {
  margin-right: -17px;
}

.c0.AvatarStack--three-plus.AvatarStack--right .AvatarItem:nth-child(4) {
  margin-right: -17px;
}

.c0.AvatarStack--three-plus.AvatarStack--right .AvatarItem:nth-child(5) {
  margin-right: -17px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 38px;
}

.c1:hover {
  width: auto;
}

.c1:hover .AvatarItem {
  margin-left: 4px!important;
  opacity: 100% !important;
  visibility: visible;
  box-shadow: 0 0 0 4px #fff;
}

.c1:hover .AvatarItem:first-child {
  margin-left: 0;
}

<span
  className="c0 AvatarStack--three-plus AvatarStack--right"
>
  <span
    className="c1 AvatarStackBody"
  >
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
      sx={
        Object {
          "zIndex": 10,
        }
      }
    />
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/github"
      sx={
        Object {
          "zIndex": 9,
        }
      }
    />
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
      sx={
        Object {
          "zIndex": 8,
        }
      }
    />
    <img
      alt=""
      className="AvatarItem"
      src="https://avatars.githubusercontent.com/github"
      sx={
        Object {
          "zIndex": 7,
        }
      }
    />
  </span>
</span>
`;
